gcc/testsuite/rust/rustc/ui/resolve/issue-82156_dg.rs
fn main() {
    super(); // { dg-error ".E0433." "" { target *-*-* } }
}

